--- a/robot/index.html
+++ b/robot/index.html
@@ -7,8 +7,8 @@
     <meta name=theme-color content="#f9f9f9">
     <meta name=author content="feijiqun">
     <meta name=copyright content="feijiqun">
-    <meta name=description content="Telegram机器人 | 飞机群 - Telegram频道群组导航。收录Telegram上的优质频道、群组、机器人，打造一个高质量Telegram导航。2025全网最佳Telegram导航，从20000+频道、群组、机器人中精心筛选，更多优质内容尽在feijiqun！">
-    <meta name=keywords content="Telegram机器人,Telegram导航,feijiqun,Telegram机器人推荐,Telegram索引,TG机器人,TG导航,TG机器人推荐,TG索引,电报机器人,电报导航,电报机器人推荐,电报索引,feijiqun.github.io">
+    <meta name="description" content="电报群导航 | 飞机群搜索 - 最全的Telegram群组、频道、机器人索引平台。精选优质电报群、Telegram频道和机器人，助你快速找到感兴趣的内容，是2025年最值得收藏的Telegram导航网站。">
+    <meta name="keywords" content="电报群,Telegram群组,飞机群,电报导航,Telegram导航,电报群推荐,Telegram群推荐,Telegram群搜索,飞机群导航,电报机器人,电报索引,TG群组,TG频道,TG机器人,Telegram索引,feijiqun,feijiqun导航,电报频道,电报群大全">
     <meta name=image content="/assets/images/favicon.png">
       <meta name="google-site-verification" content="DMAKNIFCJBBi7jqI-RRUUWgnQ-iEIuIaoCokKcxcfVs" />
     <meta name="msvalidate.01" content="3825955D3AA4A90115C42EE7EA7C3CFE" />
