--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
     <title>频道 | 频道导航 - Telegram频道群组导航</title>
     <link rel="shortcut icon" href=/assets/images/favicon.png>
     <link rel=stylesheet id=block-library-css href=/assets/css/block-library.min-5.6.2.css type=text/css media=all>
-    <link rel=stylesheet id=bootstrap-css href=/assets/css/bootstrap.min-4.3.1.css
-          type=text/css media=all>
-    <link rel=stylesheet id=fancybox-css href=/assets/css/fancybox.min-3.5.7.css type=text/css
-          media=all>
-    <link rel=stylesheet id=iowen-css href=/assets/css/style-3.03029.1.css type=text/css
-          media=all>
+    <link rel=stylesheet id=bootstrap-css href=/assets/css/bootstrap.min-4.3.1.css type=text/css media=all>
+    <link rel=stylesheet id=fancybox-css href=/assets/css/fancybox.min-3.5.7.css type=text/css media=all>
+    <link rel=stylesheet id=iowen-css href=/assets/css/style-3.03029.1.css type=text/css media=all>
     <link rel=stylesheet id=custom-css href=/assets/css/custom-style.css type=text/css
           media=all>
     <link rel=stylesheet id=modern-enhancements-css href=/assets/css/modern-enhancements.css type=text/css
